--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,21 +26,22 @@
     "@candidosales/material-time-picker": "^2.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "chart.js": "^2.9.3",
-    "core-js": "^2.6.10",
+    "core-js": "^2.6.11",
     "firebase": "^6.6.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
+    "ngx-material-timepicker": "^5.3.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "~8.3.19",
+    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.5.3",
