--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/ngx-select-dropdown/dist/assets/style.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
