--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
     "ngx-material-timepicker": "^5.3.0",
+    "ngx-select-dropdown": "^1.3.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
