--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^6.6.2",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
+    "ng2-search-filter": "^0.5.1",
     "ngx-material-timepicker": "^5.3.0",
     "ngx-select-dropdown": "^1.3.0",
     "rxjs": "~6.5.3",
