--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
-    "@angular/fire": "^5.2.3",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.14",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~8.2.14",
@@ -32,14 +32,14 @@
     "lodash": "^4.17.15",
     "ng2-search-filter": "^0.5.1",
     "ngx-material-timepicker": "^5.3.0",
-    "ngx-select-dropdown": "^1.3.0",
-    "rxjs": "~6.5.3",
-    "tslib": "^1.10.0",
+    "ngx-select-dropdown": "^1.3.1",
+    "rxjs": "^6.5.4",
+    "tslib": "^1.11.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
-    "@angular/cli": "^8.3.21",
+    "@angular-devkit/build-angular": "^0.803.25",
+    "@angular/cli": "^8.3.25",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/node": "~8.9.4",
